[gd_scene load_steps=13 format=2]

[ext_resource path="res://resource/game/cookslot.tscn" type="PackedScene" id=1]
[ext_resource path="res://cooking.gd" type="Script" id=2]
[ext_resource path="res://resource/images/farm/cooking.png" type="Texture" id=3]
[ext_resource path="res://resource/images/slot.tres" type="Texture" id=4]
[ext_resource path="res://resource/game/ingredient.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 6

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 135, 180 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 135, 0, 135, 180 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 180, 135, 180 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "cooking",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxLine" id=7]
thickness = 4
vertical = true

[node name="Cooking" type="Node2D"]
script = ExtResource( 2 )

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( 91.7788, 205.129 )
points = PoolVector2Array( 0, 0, 0.148804, -112.089, 200.149, -111.589, 200, 0 )
width = 3.0
default_color = Color( 0.513726, 0.513726, 0.513726, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 35.0
margin_top = 409.0
margin_right = 350.0
margin_bottom = 639.0
rect_min_size = Vector2( 315, 230 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
margin_right = 292.0
margin_bottom = 366.0
columns = 4

[node name="cookslot" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]

[node name="cookslot2" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 74.0
margin_right = 144.0
focus_mode = 2

[node name="cookslot3" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 148.0
margin_right = 218.0
focus_mode = 2

[node name="cookslot4" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 222.0
margin_right = 292.0
focus_mode = 2

[node name="cookslot5" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_top = 74.0
margin_bottom = 144.0
focus_mode = 2

[node name="cookslot6" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 74.0
margin_top = 74.0
margin_right = 144.0
margin_bottom = 144.0
focus_mode = 2

[node name="cookslot7" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 148.0
margin_top = 74.0
margin_right = 218.0
margin_bottom = 144.0
focus_mode = 2

[node name="cookslot8" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 222.0
margin_top = 74.0
margin_right = 292.0
margin_bottom = 144.0
focus_mode = 2

[node name="cookslot9" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_top = 148.0
margin_bottom = 218.0
focus_mode = 2

[node name="cookslot10" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 74.0
margin_top = 148.0
margin_right = 144.0
margin_bottom = 218.0
focus_mode = 2

[node name="cookslot11" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 148.0
margin_top = 148.0
margin_right = 218.0
margin_bottom = 218.0
focus_mode = 2

[node name="cookslot12" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 222.0
margin_top = 148.0
margin_right = 292.0
margin_bottom = 218.0
focus_mode = 2

[node name="cookslot13" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_top = 222.0
margin_bottom = 292.0
focus_mode = 2

[node name="cookslot14" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 74.0
margin_top = 222.0
margin_right = 144.0
margin_bottom = 292.0
focus_mode = 2

[node name="cookslot15" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 148.0
margin_top = 222.0
margin_right = 218.0
margin_bottom = 292.0
focus_mode = 2

[node name="cookslot16" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 222.0
margin_top = 222.0
margin_right = 292.0
margin_bottom = 292.0
focus_mode = 2

[node name="cookslot17" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_top = 296.0
margin_bottom = 366.0
focus_mode = 2

[node name="cookslot18" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 74.0
margin_top = 296.0
margin_right = 144.0
margin_bottom = 366.0
focus_mode = 2

[node name="cookslot19" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 148.0
margin_top = 296.0
margin_right = 218.0
margin_bottom = 366.0
focus_mode = 2

[node name="cookslot20" parent="ScrollContainer/GridContainer" groups=[
"cookslot",
] instance=ExtResource( 1 )]
margin_left = 222.0
margin_top = 296.0
margin_right = 292.0
margin_bottom = 366.0
focus_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 40.0
margin_top = 240.0
margin_right = 332.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ingredient" type="TextureButton" parent="HBoxContainer" groups=[
"ingredientslot",
]]
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="amount" type="Label" parent="HBoxContainer/ingredient"]
margin_left = 5.0
margin_top = 50.0
margin_right = 29.0
margin_bottom = 64.0
rect_min_size = Vector2( 24, 14 )
custom_styles/normal = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="HBoxContainer/ingredient"]
margin_top = 80.0
margin_right = 70.0
margin_bottom = 94.0
text = "Ingrident 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ingredient2" type="TextureButton" parent="HBoxContainer" groups=[
"ingredientslot",
]]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="amount2" type="Label" parent="HBoxContainer/ingredient2"]
margin_left = 5.0
margin_top = 50.0
margin_right = 29.0
margin_bottom = 64.0
rect_min_size = Vector2( 24, 14 )
custom_styles/normal = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name2" type="Label" parent="HBoxContainer/ingredient2"]
margin_top = 80.0
margin_right = 70.0
margin_bottom = 94.0
text = "Ingrident 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ingredient3" type="TextureButton" parent="HBoxContainer" groups=[
"ingredientslot",
]]
margin_left = 148.0
margin_right = 218.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="amount3" type="Label" parent="HBoxContainer/ingredient3"]
margin_left = 5.0
margin_top = 50.0
margin_right = 29.0
margin_bottom = 64.0
rect_min_size = Vector2( 24, 14 )
custom_styles/normal = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name3" type="Label" parent="HBoxContainer/ingredient3"]
margin_top = 80.0
margin_right = 70.0
margin_bottom = 94.0
text = "Ingrident 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ingredient4" type="TextureButton" parent="HBoxContainer" groups=[
"ingredientslot",
]]
margin_left = 222.0
margin_right = 292.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="amount4" type="Label" parent="HBoxContainer/ingredient4"]
margin_left = 5.0
margin_top = 50.0
margin_right = 29.0
margin_bottom = 64.0
rect_min_size = Vector2( 24, 14 )
custom_styles/normal = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name4" type="Label" parent="HBoxContainer/ingredient4"]
margin_top = 80.0
margin_right = 70.0
margin_bottom = 94.0
text = "Ingrident 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 190, 140 )
frames = SubResource( 5 )
animation = "cooking"
frame = 1
playing = true

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 92.9784, 228.452 )
points = PoolVector2Array( 0, 0, 200, 0 )
width = 3.0
default_color = Color( 0.513726, 0.513726, 0.513726, 1 )

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2( 25, 340 )
points = PoolVector2Array( 0, 0, 320, 0 )
width = 3.0
default_color = Color( 0.513726, 0.513726, 0.513726, 1 )

[node name="CookButton" type="Button" parent="."]
margin_left = 215.0
margin_top = 56.0
margin_right = 295.0
margin_bottom = 88.0
text = "Start Cooking"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 61.1742
margin_top = 43.776
margin_right = 144.174
margin_bottom = 101.776
window_title = "Coming Soon"

[node name="selecteditem" type="Label" parent="."]
margin_left = 25.0
margin_top = 344.0
margin_right = 127.0
margin_bottom = 366.0
custom_styles/normal = SubResource( 7 )
text = "Selected Item:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = -3.0
margin_top = 98.0
margin_right = 63.0
margin_bottom = 122.0
pressed = true
text = "Notify"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/ingredient" to="HBoxContainer/ingredient" method="_on_ingredient_pressed"]
[connection signal="pressed" from="HBoxContainer/ingredient2" to="HBoxContainer/ingredient2" method="_on_ingredient_pressed"]
[connection signal="pressed" from="HBoxContainer/ingredient3" to="HBoxContainer/ingredient3" method="_on_ingredient_pressed"]
[connection signal="pressed" from="HBoxContainer/ingredient4" to="HBoxContainer/ingredient4" method="_on_ingredient_pressed"]
[connection signal="pressed" from="CookButton" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]

[editable path="ScrollContainer/GridContainer/cookslot"]

[editable path="ScrollContainer/GridContainer/cookslot2"]

[editable path="ScrollContainer/GridContainer/cookslot3"]

[editable path="ScrollContainer/GridContainer/cookslot4"]

[editable path="ScrollContainer/GridContainer/cookslot5"]

[editable path="ScrollContainer/GridContainer/cookslot6"]

[editable path="ScrollContainer/GridContainer/cookslot7"]

[editable path="ScrollContainer/GridContainer/cookslot8"]

[editable path="ScrollContainer/GridContainer/cookslot9"]

[editable path="ScrollContainer/GridContainer/cookslot10"]

[editable path="ScrollContainer/GridContainer/cookslot11"]

[editable path="ScrollContainer/GridContainer/cookslot12"]

[editable path="ScrollContainer/GridContainer/cookslot13"]

[editable path="ScrollContainer/GridContainer/cookslot14"]

[editable path="ScrollContainer/GridContainer/cookslot15"]

[editable path="ScrollContainer/GridContainer/cookslot16"]

[editable path="ScrollContainer/GridContainer/cookslot17"]

[editable path="ScrollContainer/GridContainer/cookslot18"]

[editable path="ScrollContainer/GridContainer/cookslot19"]

[editable path="ScrollContainer/GridContainer/cookslot20"]
